--- a/Alllive/Views/User/RegisterSuccess.cshtml
+++ b/Alllive/Views/User/RegisterSuccess.cshtml
@@ -4,5 +4,5 @@
 }
 
 <h2>You have succesfully registered </h2>
-<p>Click @Html.ActionLink("here","Login","Home") to log in!</p>
+<p>Click @Html.ActionLink("here","Login","User") to log in!</p>
 
