working on payment gateway

--- a/Alllive/Views/User/Schedule.cshtml
+++ b/Alllive/Views/User/Schedule.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Alllive.Models.MeetingViewModel>
+﻿@model IEnumerable<Alllive.Models.ScheduleMeeting>
     @{
     ViewBag.Title = "Schedule";
     }
